AdditionalMaterialsService logic updated